--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,10 @@
 {
   "dependencies": {
     "com.unity.package-manager-ui": "2.0.3",
-    "com.unity.postprocessing": "2.0.15-preview",
-    "com.unity.probuilder": "3.0.9",
-    "com.unity.progrids": "3.0.3-preview.0",
-    "com.unity.shadergraph": "4.1.0-preview",
+    "com.unity.postprocessing": "2.1.3",
+    "com.unity.probuilder": "4.0.3",
+    "com.unity.progrids": "3.0.3-preview.4",
+    "com.unity.shadergraph": "4.9.0-preview",
     "com.unity.textmeshpro": "1.3.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
